<resources>
    <string name="app_name">HELMY</string>
    <string name="Yes">SÍ</string>
    <string name="No">NO</string>
    <string name="Ok">OK</string>
    <string name="Later">LUEGO</string>
    <string name="cancel">Cancelar</string>
    <string name="checkInternetConnection">Revisa tu conexión a internet</string>
    <string name="goBack">VOLVER</string>
    <string name="errorTryAgain">Error, intenta de nuevo.</string>
    <string name="errorWithServer">Error en el envío de datos del servidor</string>
    <string name="facebook_app_id">485686945345147</string>
    <string name="fb_login_protocol_scheme">fb485686945345147</string>
    <string name="google_cliente_id">47959277174-o1fhqfuqit5e36v7hfcdla82hklv0a7n.apps.googleusercontent.com</string>
    <string name="searchingHelmy">Buscando Helmy...</string>
    <string name="Settings">Ajustes</string>
    <string name="ChooseNewDevice">Selecciona un dispositivo</string>
    <string name="DeviceConnected">Conectado a </string>
    <string name="DeviceDisconnected"> desconectado</string>
    <string name="isAndroidGO">Tu teléfono tiene Android GO, el asistente de voz de Google
        no funcionará con la pantalla apagada.</string>
    <string name="HELMET_ON_HEAD">Casco bien puesto</string>
    <string name="helmetNotOnTheHead">Casco mal puesto</string>
    <string name="HelmetConnected">Casco conectado</string>
    <string name="HelmetFasten">Casco abrochado</string>
    <string name="helmetDisconnected">Casco desconectado</string>
    <string name="helmetConnected">Casco conectado</string>
    <string name="bikeConnected">Moto conectada</string>
    <string name="bikeDisconnected">Moto desconectada</string>
    <string name="registerData">REGISTRO DE DATOS</string>
    <string name="registerPersonalData">DATOS PERSONALES</string>
    <string name="registerEmergencyContact">CONTACTOS</string>
    <string name="configDevices">CONFIGURACIÓN</string>
    <string name="configHelmet">HELMY-C</string>
    <string name="configBike">HELMY-M</string>
    <string name="ready">LISTO</string>
    <string name="wantToContinueWithoutBike">¿Quieres continuar sin configurar una motocicleta?
        (Luego puedes agregar más dispositivos en el menú principal)</string>
    <string name="whyPersonalData">Ahora vamos a registrar tus datos personales por única vez.</string>
    <string name="whyContacts">Diligencia los datos de las personas a contactar en caso de emergencia (al menos uno).</string>
    <string name="whyRegisterHelmet">Enciende tu Helmy-C antes de empezar. \n\nRegistra tu Helmy-C y el casco donde se instalará.</string>
    <string name="whyRegisterBike">Enciende tu moto antes de empezar. \n\nRegistra tu Helmy-M y la moto donde se instalará.</string>
    <string name="registerPersonalDataTitle">DATOS PERSONALES</string>
    <string name="RegisterNewUser">Registro</string>
    <string name="userGivenNames">Nombres</string>
    <string name="userLastName">Apellidos</string>
    <string name="userAge">Edad</string>
    <string name="userSex">Sexo</string>
    <string name="female">Mujer</string>
    <string name="male">Hombre</string>
    <string name="ratherNotSaySex">Prefiero no decir</string>
    <string name="userNationality">Nacionalidad</string>
    <string name="userIDtype">Tipo de documento</string>
    <string name="userCedula">Cédula de ciudadanía</string>
    <string name="userTI">Tarjeta de identidad</string>
    <string name="userCedulaForeigners">Cédula de extranjería</string>
    <string name="userPassport">Pasaporte</string>
    <string name="otherIDtype">Otro</string>
    <string name="userIdNumber">No. Identificación</string>
    <string name="userLicense">No. Licencia</string>
    <string name="userPhone">Tu teléfono</string>
    <string name="userEmergencyPhone">Teléfono</string>
    <string name="userRH">RH</string>
    <string name="UserEPS">EPS</string>
    <string name="UserARL">ARL</string>
    <string name="userEnterNextData">SIGUIENTE</string>
    <string name="userSaveData">GUARDAR</string>
    <string name="UserLicenseIsNational">Licencia colombiana</string>
    <string name="none">Ninguna</string>
    <string name="minimumAge">La edad mínima es 16 años.</string>
    <string name="ReasonForAskingPersonalInformation">Helmy detecta accidentes. En caso de que sufras un
        accidente le enviaremos un SMS a tus contactos de emergencia con esta información.</string>
    <string name="EmergencyContactLabel">Contacto de emergencia</string>
    <string name="AllFieldsAreRequired">Todos los campos son obligatorios</string>
    <string name="WhyThisInformationLabel">¿Por qué esta información?</string>
    <string name="howWannaInsertPersonalData">¿Cómo quieres continuar ingresando tus datos personales?</string>
    <string name="readPhotoLicense">EXTRAER DE TU LICENCIA</string>
    <string name="insertPersonalDataManually">AGREGAR MANUALMENTE</string>
    <string name="dataUpdated">Datos actualizados</string>
    <string name="dataSaved">Datos guardados</string>
    <string name="dataDeleted">Datos eliminados</string>
    <string name="UserEmergencyContact">CONTACTO DE EMERGENCIA</string>
    <string name="main">PRINCIPAL</string>
    <string name="secondary">SECUNDARIO</string>
    <string name="addSecondContact">Segundo contacto</string>
    <string name="editSecondContact">Editar segundo contacto</string>
    <string name="deleteContact">Eliminar contacto</string>
    <string name="registerEmergencyContactTitle">REGISTRO DE CONTACTO</string>
    <string name="register2ndContact">Registrar un segundo contacto</string>
    <string name="contactGivenNames">Nombres de contacto</string>
    <string name="contactLastName">Apellidos de contacto</string>
    <string name="contactAlreadySelected">Agrega un número diferente al del contacto principal</string>
    <string name="landlinePhoneError">Debes seleccionar un número celular</string>
    <string name="registerBike">REGISTRAR MOTO</string>
    <string name="bikeChassisID">No. Chasis</string>
    <string name="bikeBrand">Marca</string>
    <string name="bikeSOAT">No. Poliza SOAT</string>
    <string name="checkBox2ndEnsurance">Agregar otro seguro</string>
    <string name="ensuranceNumber">No. Poliza</string>
    <string name="phone2ndEnsurance">Teléfono aseguradora</string>
    <string name="bikePlate">Placa de la moto</string>
    <string name="plate">Placa</string>
    <string name="WheelReference">Referencia de la rueda</string>
    <string name="whatIsWheelReference">Ingresa los 3 primeros números</string>
    <string name="bikePassword">Clave de encendido</string>
    <string name="bikePasswordHint">Clave</string>
    <string name="savingPassword">Guardando clave</string>
    <string name="whatIsLockPassword">Ingresando tu clave podrás encender tu moto sin necesidad de tener la aplicación o tu Helmy-C.
    \n\nTu clave consiste en 3 números. Para ingresar cada dígito de tu clave, debes apuntar al número y presionar la perilla de HelmyM.</string>
    <string name="nicknameBike">Alias, ej. Mi moto</string>
    <string name="howWannaEnterBikeInfo">¿Cómo quieres ingresar la información sobre tu moto?</string>
    <string name="readPhotoSOAT">EXTRAER DEL SOAT</string>
    <string name="nicknameAlreadyExists">Alias ya existe</string>
    <string name="howToTakePicture">Debes tomar la foto solo en esta zona (No. Poliza, Marca, Chasis)</string>
    <string name="lowStorage">Error: Memoria insuficiente</string>
    <string name="justNumbers">Solo números</string>
    <string name="mustBe6CharactersLong">La placa debe contener 6 caracteres</string>
    <string name="bikeHasPassword">Este Helmy-M ya tiene una contraseña, ¿deseas actualizarla?</string>
    <string name="whatIsAliasC">Puedes asignar un nombre personalizado para identificar a tu Helmy-C.</string>
    <string name="whatIsAliasM">Puedes asignar un nombre personalizado para identificar a tu Helmy-M.</string>
    <string name="whatIsChassis">El número de chasis lo encuentras en tu tarjeta de propiedad o en el SOAT.</string>
    <string name="reasonToDisplayHelmyMList">Primero debes seleccionar tu Helmy-M</string>
    <string name="registerHelmet">REGISTRAR HELMY-C</string>
    <string name="HelmetBrand">Marca</string>
    <string name="HelmetSize">Talla</string>
    <string name="HelmetColor">Color</string>
    <string name="HelmetSerial">Numero serial</string>
    <string name="otherBrand">Otra</string>
    <string name="searchingBTaudio">Buscando Intercom...</string>
    <string name="chooseBTaudio">Selecciona un Intercom</string>
    <string name="nicknameHelmet">Alias, ej. Mi casco</string>
    <string name="retry">REINTENTAR</string>
    <string name="manualLabel">MANUAL DE USUARIO</string>
    <string name="areYouSureToDelete">¿Estás seguro de que quieres eliminar este dispositivo?</string>
    <string name="reasonToDisplayHelmyCList">Primero debes seleccionar tu Helmy-C</string>
    <string name="reasonToDisplayIntercommList">Ahora debes seleccionar el intercomunicador de tu Helmy-C</string>
    <string name="whyGPSmustBeOnForRegister">Helmy utiliza el GPS para encontrar tus dispositivos Helmy. Debes activar tu GPS para continuar.</string>
    <string name="yourDevicesTitle">TUS DISPOSITIVOS</string>
    <string name="ActivityChooseDevicesLabel">Dispositivos</string>
    <string name="PrimaryHelmetSection">HELMY-C</string>
    <string name="BikeSection">HELMY-M</string>
    <string name="HelmetPillionSection">HELMY-C COPILOTO</string>
    <string name="celphonePillionSection">CELULAR COPILOTO</string>
    <string name="DevicesSelected">LISTO</string>
    <string name="YouNeedHelmetBikeSet">Necesitas seleccionar un Helmy-C y un Helmy-M</string>
    <string name="PairDevice">EMPAREJAR</string>
    <string name="HelmyC">HELMY-C</string>
    <string name="HelmyM">HELMY-M</string>
    <string name="choosePillionCelphone">CELULARES COPILOTOS</string>
    <string name="searchingCellphones">Buscando celulares...</string>
    <string name="addNewHelmet">AGREGAR HELMY-C</string>
    <string name="addNewBike">AGREGAR HELMY-M</string>
    <string name="selectHelmet">SELECCIONA UN HELMY-C</string>
    <string name="selectBike">SELECCIONA UN HELMY-M</string>
    <string name="DeleteDevice">ELIMINAR</string>
    <string name="edit">EDITAR</string>
    <string name="go2DeviecsLabel">Mis dispositivos</string>
    <string name="pairWithAnotherHelmyC">Emparejar con otro Helmy-C</string>
    <string name="editMyPersonalData">Editar mis datos</string>
    <string name="editEmergencyContacts">Editar contactos</string>
    <string name="motoShopLabel">Moto talleres</string>
    <string name="reportRobberyLabel">Reportar robo</string>
    <string name="disableHelmyLabel">Deshabilitar Helmy</string>
    <string name="contactUsHelmy">Contáctanos</string>
    <string name="hello">Hola</string>
    <string name="goAsLabel">¿Cómo deseas empezar?</string>
    <string name="goAsDriver">CONDUCTOR</string>
    <string name="goAsPillion">PASAJERO</string>
    <string name="go2ChooseDevices">MIS DISPOSITIVOS</string>
    <string name="warningDisablingHelmy">Si deshabilitas Helmy, no podras hacer uso de todas las
        funciones incluyendo la detección de accidentes. ¿Deseas deshabilitar Helmy?</string>
    <string name="disablingHelmy">Deshabilitando...</string>
    <string name="enablingHelmy">Habilitando...</string>
    <string name="helmyDisabled">Deshabilitado</string>
    <string name="helmyBnabled">Habilitado</string>
    <string name="SendSMSprogramatically">Enviar alerta</string>
    <string name="CancelEmergencyBtn">CANCELAR</string>
    <string name="EmergencyWillBeSentIn">Alerta de emergencia será enviada en </string>
    <string name="login">INICIAR SESIÓN</string>
    <string name="validateEmail">Ve a tu correo y valida tu cuenta (revisa en spam)</string>
    <string name="sendEmailAgain">ENVIAR NUEVAMENTE</string>
    <string name="logout">Cerrar sesión</string>
</resources>