<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ActivityConfirmEmail"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:alpha="0.85">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/logout"
        android:textColor="@color/colorAccent"
        android:padding="@dimen/marginBtwWidgets"
        android:textSize="@dimen/TextSize"
        android:onClick="click_BackToLoginRegister"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/marginHorizontalWidgets"
        android:layout_marginRight="@dimen/marginHorizontalWidgets"
        android:gravity="center"
        android:textColor="@color/background_widgets"
        android:text="@string/validateEmail"
        android:textSize="@dimen/TextSizeM"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/LLbtns"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <LinearLayout
        android:id="@+id/LLbtns"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginLeft="@dimen/marginBtwWidgetsXL"
        android:layout_marginRight="@dimen/marginBtwWidgetsXL"
        android:layout_marginBottom="@dimen/marginHorizontalWidgetsXL"
        android:paddingBottom="@dimen/marginHorizontalWidgetsXL"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HelmyButtonStyle"
            android:text="@string/sendEmailAgain"
            android:onClick="click_sendEmailAgain"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/HelmyButtonStyleBlue"
            android:text="@string/login"
            android:layout_marginTop="@dimen/marginBtwWidgetsXL"
            android:onClick="click_goToLogin"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/imgLogoBottom1"
        android:layout_width="@dimen/logoWidth"
        android:layout_height="@dimen/logoHeight"
        android:src="@drawable/helmy_logo"
        android:adjustViewBounds="true"
        android:layout_marginRight="@dimen/marginBtwWidgets"
        android:layout_marginBottom="@dimen/marginBtwWidgets"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <ProgressBar
        android:id="@+id/pbConfirm"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>